# au-recycling-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  litellm-config.yaml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml  deploy.yml  scrape.yml
backend/: .dockerignore  Dockerfile  build.gradle  gradle.properties  gradlew  settings.gradle
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md  initial-plan.md  plan.md  prompt.md
frontend/: .dockerignore  Dockerfile  figma-capture-retry.js  figma-capture.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scraper/: .dockerignore  .env.example  Dockerfile  README.md  config.py  council_overrides.yaml  councils.yaml  councils_20260319_153032.yaml  db.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  seed_councils.py  seed_recycling_urls.py  seed_suburbs.py  utils.py
scraper/councils/: base.py  brisbane_city.py  city_of_melbourne.py  city_of_sydney.py  inner_west_council.py  registry.py  waverley_council.py
scraper/scripts/: councils_yaml.py  dump_councils.py  seed_councils.py  seed_materials.py  seed_recycling_urls.py  seed_suburbs.py
scraper/tests/: test_models.py  test_seed_recycling_urls.py  test_utils.py
scripts/: start-backend.sh  start-frontend.sh
(+52 files in other folders)
